--- a/app/src/main/res/layout/fragment_groupdate.xml
+++ b/app/src/main/res/layout/fragment_groupdate.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/background"
+    tools:context=".Groupdate">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewpager"
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-</RelativeLayout>
+</FrameLayout>
