--- a/app/src/main/res/layout/single_recycler2.xml
+++ b/app/src/main/res/layout/single_recycler2.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:id="@+id/imageview2"
         android:layout_width="match_parent"
         android:layout_height="600dp"
-        android:src="@drawable/mod3"
-        android:scaleType="centerCrop"/>
+        android:src="@drawable/model"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/description" />
 
     <View
         android:id="@+id/image_detail"
@@ -20,6 +20,7 @@
         />
 
     <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profile_image1"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/model"
@@ -32,6 +33,7 @@
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/like_heart"
         android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,16 +41,19 @@
         android:layout_alignEnd="@id/image_detail">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/before_like"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_heart2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/description" />
 
         <ImageView
+            android:visibility="gone"
+            android:id="@+id/after_like"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:elevation="10dp"
@@ -56,7 +61,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -68,14 +74,59 @@
         android:layout_alignTop="@id/imageview2"
         android:layout_alignEnd="@id/imageview2"
         android:layout_margin="5dp"
-        />
+        android:contentDescription="@string/description" />
 
     <LinearLayout
+        android:id="@+id/detils"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/profile_image1"
+        android:layout_alignBottom="@id/image_detail"
+        android:layout_alignStart="@id/profile_image1"
+        >
+
         <TextView
+            android:id="@+id/age_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="AGE : 25"
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-condensed-light"
             />
+
+        <TextView
+            android:id="@+id/height_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HEIGHT : normal"
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-condensed-light"
+            />
+
+        <TextView
+            android:id="@+id/from_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FROM : nairobi"
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-condensed-light"
+            />
+
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/like_heart"
+        android:layout_alignEnd="@id/like_heart"
+        android:layout_alignStart="@id/like_heart"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="1M+"
+        />
 </RelativeLayout>
