--- a/app/src/main/res/values/custom_images_styles.xml
+++ b/app/src/main/res/values/custom_images_styles.xml
@@ -4,6 +4,10 @@
         <item name="cornerSize">15%</item>
     </style>
 
+    <style name="corner_style2">
+        <item name="cornerSize">10%</item>
+    </style>
+
     <style name="circle_image">
         <item name="cornerSize">50%</item>
     </style>
