--- a/app/src/main/res/layout/singlehobb_resycler.xml
+++ b/app/src/main/res/layout/singlehobb_resycler.xml
@@ -8,12 +8,9 @@
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="swimming "
         android:textSize="19sp"
-        android:layout_marginTop="2dp"
-        android:layout_marginHorizontal="2dp"
         android:padding="2dp"
-        android:layoutDirection="rtl"
+        android:layoutDirection="ltr"
         />
 
 </LinearLayout>
