--- a/app/src/main/res/layout/adview1.xml
+++ b/app/src/main/res/layout/adview1.xml
@@ -11,8 +11,8 @@
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView1"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:elevation="5dp"
         android:padding="5dp"
         ads:adSize="LARGE_BANNER"
