--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="cornerSize">10%</item>
     </style>
 
+    <style name="corner_style3">
+        <item name="cornerSize">5%</item>
+    </style>
+
     <style name="circle_image">
         <item name="cornerSize">50%</item>
     </style>
