--- a/app/src/main/res/layout/single_recycler1.xml
+++ b/app/src/main/res/layout/single_recycler1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:layout_margin="5dp"
@@ -11,12 +11,11 @@
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="2dp"
         android:adjustViewBounds="true"
+        android:background="@color/white"
+        android:padding="2dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/model"
-        app:shapeAppearanceOverlay="@style/corner_style3"
-        android:background="@color/white"/>
+        app:shapeAppearanceOverlay="@style/corner_style3" />
 
 
 
@@ -31,5 +30,21 @@
         android:layout_alignEnd="@id/imageView1"
         android:contentDescription="@string/description"
         android:visibility="invisible"/>
+
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/shimmerFrame1"
+        >
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/shimmerImageView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/error"
+            android:adjustViewBounds="true"
+            app:shapeAppearanceOverlay="@style/corner_style3" />
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </RelativeLayout>
